--- a/Banmai/Banmai.vbproj
+++ b/Banmai/Banmai.vbproj
@@ -79,7 +79,9 @@
     <Reference Include="PCSC.Iso7816, Version=7.0.0.0, Culture=neutral, PublicKeyToken=13b76e54a2ee80a7, processorArchitecture=MSIL">
       <HintPath>..\packages\PCSC.Iso7816.7.0.0\lib\netstandard2.0\PCSC.Iso7816.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -103,6 +105,7 @@
     </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -133,6 +136,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>db_banmai1DataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="db_banmai1DataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_banmai1DataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
@@ -173,6 +181,12 @@
       <DependentUpon>frmCard.vb</DependentUpon>
     </Compile>
     <Compile Include="Other\frmCard.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other\frmClose.Designer.vb">
+      <DependentUpon>frmClose.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Other\frmClose.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Other\frmFundManagement.Designer.vb">
@@ -283,6 +297,12 @@
     <Compile Include="report\frmStatement.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="report\ProfitAndLossReportForm.Designer.vb">
+      <DependentUpon>ProfitAndLossReportForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="report\ProfitAndLossReportForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -302,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Other\frmCard.resx">
       <DependentUpon>frmCard.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Other\frmClose.resx">
+      <DependentUpon>frmClose.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Other\frmFundManagement.resx">
       <DependentUpon>frmFundManagement.vb</DependentUpon>
@@ -360,9 +383,13 @@
     <EmbeddedResource Include="report\GuarantorReport.rdlc" />
     <EmbeddedResource Include="report\Individualdebtor.rdlc" />
     <EmbeddedResource Include="report\LoanReport1.rdlc" />
+    <EmbeddedResource Include="report\ProfitAndLossReportForm.resx">
+      <DependentUpon>ProfitAndLossReportForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="report\SajjaReport.rdlc" />
     <EmbeddedResource Include="report\shareReport.rdlc" />
     <EmbeddedResource Include="report\StatementReport.rdlc" />
+    <EmbeddedResource Include="report\test.rdlc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="db_banmai1DataSet.xsc">
@@ -375,6 +402,17 @@
     </None>
     <None Include="db_banmai1DataSet.xss">
       <DependentUpon>db_banmai1DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="db_banmai1DataSet1.xsc">
+      <DependentUpon>db_banmai1DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="db_banmai1DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>db_banmai1DataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="db_banmai1DataSet1.xss">
+      <DependentUpon>db_banmai1DataSet1.xsd</DependentUpon>
     </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
