--- a/Banmai/App.config
+++ b/Banmai/App.config
@@ -3,8 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Banmai.My.MySettings.db_banmai1ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\db_banmai1.accdb"
-            providerName="System.Data.OleDb" />
+        <add name="Banmai.My.MySettings.db_banmai1ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\db_banmai1.accdb" providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
