--- a/Banmai/packages.config
+++ b/Banmai/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FontAwesome.Sharp" version="6.6.0" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net48" />
