--- a/Banmai/Banmai.vbproj
+++ b/Banmai/Banmai.vbproj
@@ -623,7 +623,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="db_banmai1.accdb">
+    <Content Include="Database\db_banmai1.accdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
