--- a/Banmai/App.config
+++ b/Banmai/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Banmai.My.MySettings.db_banmai1ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database\db_banmai1.accdb"
+        <add name="Banmai.My.MySettings.db_banmai1ConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\db_banmai1.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
